--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mime": "^4.0.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
+    "openai": "^4.77.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
