--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
+    "firebase-admin": "^13.0.2",
     "huoon-api": "file:",
     "i18n": "^0.15.1",
     "joi": "^17.13.3",
