--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "cron": "^4.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
@@ -27,6 +28,8 @@
     "mime": "^4.0.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
+    "node": "^23.8.0",
+    "node-cron": "^3.0.3",
     "openai": "^4.77.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
